// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginSocialButtons /> renders all buttons 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    <FormattedMessage
      id="authenticate-with"
      values={Object {}}
    />
  </div>
  <LoginSocialButton
    type="saml"
  />
  <LoginSocialButton
    buttonColor="#ABABAB"
    key="0"
    labelColor="#FFFFFF"
    switchUserMode={false}
    text="Cap Collectif Oauth2 Provider"
    type="openId"
  />
  <LoginSocialButton
    key="1"
    type="franceConnect"
  />
  <LoginSocialButton
    type="facebook"
  />
  <LoginSocialButton
    type="google"
  />
  <p
    className="p--centered"
  >
    <FormattedMessage
      id="login.or"
      values={Object {}}
    />
  </p>
</Fragment>
`;

exports[`<LoginSocialButtons /> renders nothing 1`] = `""`;

exports[`<LoginSocialButtons /> renders only Facebook button 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    <FormattedMessage
      id="authenticate-with"
      values={Object {}}
    />
  </div>
  <LoginSocialButton
    type="facebook"
  />
  <p
    className="p--centered"
  >
    <FormattedMessage
      id="login.or"
      values={Object {}}
    />
  </p>
</Fragment>
`;

exports[`<LoginSocialButtons /> renders only FranceConnect button 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    <FormattedMessage
      id="authenticate-with"
      values={Object {}}
    />
  </div>
  <LoginSocialButton
    key="1"
    type="franceConnect"
  />
  <p
    className="p--centered"
  >
    <FormattedMessage
      id="login.or"
      values={Object {}}
    />
  </p>
</Fragment>
`;

exports[`<LoginSocialButtons /> renders only Google button 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    <FormattedMessage
      id="authenticate-with"
      values={Object {}}
    />
  </div>
  <LoginSocialButton
    type="google"
  />
  <p
    className="p--centered"
  >
    <FormattedMessage
      id="login.or"
      values={Object {}}
    />
  </p>
</Fragment>
`;

exports[`<LoginSocialButtons /> renders only OpenID button 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    <FormattedMessage
      id="authenticate-with"
      values={Object {}}
    />
  </div>
  <LoginSocialButton
    buttonColor="#ABABAB"
    key="0"
    labelColor="#FFFFFF"
    switchUserMode={false}
    text="Cap Collectif Oauth2 Provider"
    type="openId"
  />
  <p
    className="p--centered"
  >
    <FormattedMessage
      id="login.or"
      values={Object {}}
    />
  </p>
</Fragment>
`;

exports[`<LoginSocialButtons /> renders only SAML button 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    <FormattedMessage
      id="authenticate-with"
      values={Object {}}
    />
  </div>
  <LoginSocialButton
    type="saml"
  />
  <p
    className="p--centered"
  >
    <FormattedMessage
      id="login.or"
      values={Object {}}
    />
  </p>
</Fragment>
`;

exports[`<LoginSocialButtons /> renders without OR separator 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    <FormattedMessage
      id="authenticate-with"
      values={Object {}}
    />
  </div>
  <LoginSocialButton
    type="saml"
  />
  <LoginSocialButton
    buttonColor="#ABABAB"
    key="0"
    labelColor="#FFFFFF"
    switchUserMode={false}
    text="Cap Collectif Oauth2 Provider"
    type="openId"
  />
  <LoginSocialButton
    key="1"
    type="franceConnect"
  />
  <LoginSocialButton
    type="facebook"
  />
  <LoginSocialButton
    type="google"
  />
</Fragment>
`;
